packages/greyalien-prototype/greyalien_prototype-0.3.0.tar.gz/greyalien_prototype-0.3.0/tests/conformance/pass/enum_payload_match.grl
enum Option { None, Some(Int) }

fn main() {
  let x = Some(2);
  let out = match x {
    Some(value) => { "value is " + value; }
    _ => { "no"; }
  };
  print(out);
}
