packages/greyalien-prototype/greyalien_prototype-0.3.0.tar.gz/greyalien_prototype-0.3.0/tests/conformance/fail/enum_unknown_variant.grl
enum Color { Red }

fn main() {
  let c = Red;
  let label = match c {
    Blue(1) => { "b"; }
    _ => { "r"; }
  };
  print(label);
}
